--- a/resources/styles.css
+++ b/resources/styles.css
@@ -30,6 +30,7 @@ body {
   
   .hero img {
     width: 300px; /* Adjust size as needed */
+    height: 500px;
     border-radius: 50%; /* For a circular image */
   }
   
